# agent-predict-power-bi

./: .gitignore  app.py  executar_experimento.py  gerar_figuras_resultados.py  pyproject.toml
.streamlit/: config.toml
experiments/: experimento_dinamico.py
scripts/analysis/: generate_dependency_graph.py
scripts/dev/: debug_model.py
scripts/figures/: generate_all_figures.py  generate_architecture_diagram.py  generate_results_chart.py
src/pbi_refactor_agent/: __init__.py  agent.py  cli.py  config.py  mcp_client.py  models.py
src/pbi_refactor_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pbi_refactor_agent/discovery/: __init__.py  dependency_graph.py  duplicate_detector.py  impact_analyzer.py  model_health.py  production_validator.py  risk_hotspots.py  source_drift_detector.py
src/pbi_refactor_agent/refactor/: __init__.py  auto_documentation.py  dax_refactor.py  llm_client.py  prompt_engine.py
src/pbi_refactor_agent/static/: style.css
src/pbi_refactor_agent/utils/: __init__.py  logging.py  pbix_extractor.py  reporting.py  schema_patcher.py
src/pbi_refactor_agent/validation/: __init__.py  anti_patterns.py  equivalence_tester.py  performance_analyzer.py  syntax_validator.py  validator.py
tcc_latex/: main.tex  referencias.bib
tcc_latex/apendices/: apendice_dataset.tex  apendice_prompts.tex
tcc_latex/figuras_teste/: _gerar_grafo.py
tests/: conftest.py
tests/unit/: test_agent.py  test_discovery.py  test_refactor.py  test_validation.py
