[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbi-refactor-agent"
version = "1.0.0"
description = "Agente para Análise Preditiva de Impacto e Refatoração Semiautomática de Modelos Semânticos Power BI com LLM e MCP"
authors = [{name = "Isabella da Silva Moura", email = "isabella@faeterj.edu.br"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.28.0",
    "networkx>=3.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "httpx>=0.25.0",
    "groq>=0.4.0",
    "openai>=1.10.0",
    "anthropic>=0.8.0",
    "google-genai>=1.0.0",
    "structlog>=23.0.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pbi_refactor_agent = ["static/*.css"]

[project.scripts]
pbi-refactor = "pbi_refactor_agent.cli:main"